# pepi

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  VERSIONING.md  install.sh  package-lock.json  package.json  pepi.py  pepi.sh  playwright.config.js  pyproject.toml  requirements.txt  setup.py  web_api.py
.github/workflows/: ci.yml  ui-tabs-e2e.yml
docs/: AI_INDEX_ADVISOR.md  milestone-releases.md
pepi/: __init__.py  __main__.py  cache.py  cli.py  connection_log.py  errors.py  formatters.py  index_advisor.py  ingest_store.py  ingest_worker.py  parser.py  queries_awr.py  query_findings.py  query_health.py  sampling.py  stats.py  types.py  upgrade.py  utils.py  version.py  web_api.py
pepi/ftdc/: __init__.py  copy_files.py  docker-compose.yml
pepi/ftdc/ftdc_exporter/: Dockerfile  go.mod  go.sum  main.go
pepi/ftdc/ftdc_exporter/ftdc/: ftdc.go  iterator.go  normalize.go  reader.go  stream.go  stream_test.go  types.go
pepi/ftdc/ftdc_exporter/ftdc/testdata/: metrics_to_get.txt
pepi/ftdc/grafana/: datasources.yaml  main.yaml
pepi/ftdc/grafana/dashboards/: dashboard.json
pepi/web_static/: app.js  faq.html  index.html  styles.css
scripts/: download_model.py
tests/: README.md  conftest.py  test_api.py  test_cache.py  test_connection_log.py  test_diagnostics.py  test_index_advisor.py  test_ingest_preflight.py  test_parser.py  test_query_clients.py  test_query_enhancements.py  test_query_findings.py  test_query_health.py  test_sampling.py  test_stats.py  test_tmp_hygiene.py
tests/e2e/: query-diagnostics.spec.js  ui-tabs.spec.js
web_static/: app.js  index.html  styles.css
(+4 files in other folders)
